fix: user password update
