# routes/userRoutes.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const { getUserProfile, updateUserProfile } = require('../controllers/userController');
+const { protect } = require('../middlewares/authMiddleware');
+
+const router = express.Router();
+
+router
+  .route('/profile')
+  .get(protect, getUserProfile)
+  .put(protect, updateUserProfile);
+
+module.exports = router;
